--- a/src/app/header/app-header.component.css
+++ b/src/app/header/app-header.component.css
@@ -14,7 +14,10 @@ li a {
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 16px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
     text-decoration: none;
 }
 
