created subcomponents to user profile component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<app-stkResearch></app-stkResearch>
+<!-- <app-stkResearch></app-stkResearch> -->
+<app-user-profile></app-user-profile>
