--- a/src/app/features/user-profile/profile-details/profile-details.component.html
+++ b/src/app/features/user-profile/profile-details/profile-details.component.html
@@ -1,3 +1,11 @@
-<p>
-  profile-details works!
-</p>
+<div class="profilePic">
+  <img [src]="profilePic" alt="profile Pic">
+</div>
+
+<div id="divProfile">
+  <table class="tableDetails">
+    <tr><td>{{firstName}}</td><td>{{firstName}}</td></tr>
+    <tr><td>{{lastName}}</td><td>{{lastName}}</td></tr>
+    <tr><td>{{gender}}</td><td>{{gender}}</td></tr>
+  </table>
+</div>
