--- a/src/app/features/user-profile/user-profile.component.html
+++ b/src/app/features/user-profile/user-profile.component.html
@@ -1,3 +1,5 @@
-<p>
-  user-profile works!
-</p>
+<app-profile-details></app-profile-details>
+<div class="movedLeft">
+    <app-profile-watchlist></app-profile-watchlist>
+</div>
+<app-profile-account-details></app-profile-account-details>
