added routing links to application

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
 <app-header></app-header>
-<!-- <app-stkResearch></app-stkResearch> -->
-<app-user-profile></app-user-profile>
+<router-outlet></router-outlet>
