--- a/src/app/header/app-header.component.html
+++ b/src/app/header/app-header.component.html
@@ -1,10 +1,10 @@
 <div class="divDesign">
     <ul>
-        <li><a href="#">Stock Portfolio</a></li>
-        <li><a href="#">Portfolio Overview</a></li>
-        <li><a href="#">Research Stocks</a></li>
-        <li><a href="#">Manage Portfolio</a></li>
-        <li><a href="#">About</a></li>
+        <li><a routerLink="/userLogin">Stock Portfolio</a></li>
+        <li><a routerLink="#">Portfolio Overview</a></li>
+        <li><a routerLink="/stockResearch">Research Stocks</a></li>
+        <li><a routerLink="#">Manage Portfolio</a></li>
+        <li><a routerLink="#">About</a></li>
         <li style="float:right"><a class="active" href="#">LogOut</a></li>
       </ul>
 </div>
