added angular material package

--- a/src/app/features/user-login/user-login.component.html
+++ b/src/app/features/user-login/user-login.component.html
@@ -2,6 +2,6 @@
   <p>To Login using google+ account click the button below</p>
   <button
     style="margin:20px 100px 550px 100px"
-    (click) = "redirectProfile()"
+    (click) = "redirect()"
   >Google Login</button>
 </div>
