--- a/src/app/features/user-profile/profile-details/profile-details.component.html
+++ b/src/app/features/user-profile/profile-details/profile-details.component.html
@@ -1,5 +1,5 @@
 <div class="profilePic">
-  <img [src]="profilePic" alt="profile Pic">
+  <img [src]="profilePic" alt="profile Pic" style="height:100;width:100px">
 </div>
 
 <div id="divProfile">
