--- a/src/app/header/app-header.component.html
+++ b/src/app/header/app-header.component.html
@@ -1,7 +1,7 @@
 <div class="divDesign">
     <ul>
         <li><a routerLink="/userLogin">Stock Portfolio</a></li>
-        <li><a routerLink="#">Portfolio Overview</a></li>
+        <li><a routerLink="/userProfile">Portfolio Overview</a></li>
         <li><a routerLink="/stockResearch">Research Stocks</a></li>
         <li><a routerLink="#">Manage Portfolio</a></li>
         <li><a routerLink="#">About</a></li>
