--- a/src/app/features/user-profile/user-profile.component.html
+++ b/src/app/features/user-profile/user-profile.component.html
@@ -3,3 +3,14 @@
     <app-profile-watchlist></app-profile-watchlist>
 </div>
 <app-profile-account-details></app-profile-account-details>
+
+
+<mat-grid-list cols="4" rowHeight="100px">
+    <mat-grid-tile
+    *ngFor="let tile of tiles"
+    [colspan]="tile.cols"
+    [rowspan]="tile.rows"
+    [style.background]="tile.color">
+    {{tile.text}}
+    </mat-grid-tile>
+</mat-grid-list>
