changes made to userProfile component

--- a/src/app/features/stkResearch/stkAbout/stkAbout.component.css
+++ b/src/app/features/stkResearch/stkAbout/stkAbout.component.css
@@ -1,6 +1,6 @@
 .stkAbout{
-    overflow: auto;
     color: black;
-    padding: 15px;
+    padding: 5px;
     border: solid 5px green;
+    width: auto;
 }
