--- a/src/app/features/stkResearch/stkCharts/stkCharts.component.html
+++ b/src/app/features/stkResearch/stkCharts/stkCharts.component.html
@@ -1,4 +1,4 @@
-<div style="border: solid 5px black">
+<div style="border: solid 5px black; float: left;">
     <!-- <ul>
         <li><a href="1m" (click)='get1m()'>1 month</a></li>
         <li><a href="3m" (click)='get3m()'>3 Months</a></li>
