--- a/src/app/features/stkResearch/stkResearch.component.html
+++ b/src/app/features/stkResearch/stkResearch.component.html
@@ -1,7 +1,9 @@
 <div class="mainDivStyle">
-    <div>
+    <div class="searchDiv">
         <app-stkSearch></app-stkSearch>
-        <table>
+    </div>
+    <div class="tableDiv">
+        <table class="mainTable">
             <tr><td><app-stkAbout></app-stkAbout></td></tr>
             <tr><td><app-stkStats></app-stkStats></td></tr>
             <tr><td><app-stkCharts></app-stkCharts></td></tr>
