--- a/src/app/features/user-profile/profile-account-details/profile-account-details.component.html
+++ b/src/app/features/user-profile/profile-account-details/profile-account-details.component.html
@@ -1,13 +1,15 @@
-<div class="divContainer"> 
-  <table>
-    <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
-    <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
-  </table>
+<div class="mainDiv">
+    <div class="divContainer"> 
+        <table>
+          <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
+          <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
+        </table>
+      </div>
+      
+      <div class="divContainer">
+          <table>
+            <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
+            <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
+          </table>
+        </div>
 </div>
-
-<div class="divContainer">
-    <table>
-      <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
-      <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
-    </table>
-  </div>
