user is able to access the watchlist data

--- a/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.html
+++ b/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.html
@@ -1,3 +1,7 @@
 <div class="watchlist">
-  Watchlist displays here
+  <app-watchlist-item
+  *ngFor= "let item of stkList"
+  [data] = "item"
+  >
+  </app-watchlist-item>
 </div>
