wathclist module completed

--- a/src/app/features/stkResearch/stkSearch/stkSearch.component.html
+++ b/src/app/features/stkResearch/stkSearch/stkSearch.component.html
@@ -4,4 +4,8 @@
   <button
     (click)='getData()'
     >Research</button>
+    <button
+      (click)='addToWatchlist()'
+      >Add to Watchlist
+    </button>
 </div>
