--- a/src/app/features/user-profile/profile-details/profile-details.component.html
+++ b/src/app/features/user-profile/profile-details/profile-details.component.html
@@ -1,10 +1,10 @@
 <div class="mainDiv">
     <div class="profilePic">
-        <img [src]="profilePic" alt="profile Pic" style="height:100;width:100px">
+        <img [src]="profilePic" alt="profile Pic" style="height:120px;width:100px">
       </div>
       
-      <div class="profilePic">
-        <table>
+      <div class="tableDiv">
+        <table class="tableDesign">
           <tr><td>NAME:</td><td>{{firstName | uppercase}}</td></tr>
           <tr><td>GENDER:</td><td>{{gender | uppercase}}</td></tr>
           <tr><td>PORTFOLIO VALUE:</td><td>10</td></tr>
