--- a/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
+++ b/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
@@ -1,6 +1,9 @@
 <div class="mainDiv"> 
-    <div class="firstDiv">
-        <h4 style="display:inline">{{data}}</h4>
-        <h4 style="display:inline">{{currentPrice}}</h4>
+    <div class="tableDiv">
+        <table class="tableDesign">
+            <tr>
+                <td>{{data}}</td><td>{{currentPrice}}</td>
+            </tr>
+        </table>
     </div>
 </div>
