--- a/src/app/features/user-profile/profile-account-details/profile-account-details.component.css
+++ b/src/app/features/user-profile/profile-account-details/profile-account-details.component.css
@@ -2,7 +2,7 @@
     border: solid 5px black;
     margin: 5px;
     padding: 5px;
-    float: right;
+    float: left;
 }
 
 .mainDiv{
@@ -10,6 +10,6 @@
     margin: 5px;
     padding: 5px;
     height: 150px;
-    width: 450px;
-    float: right;
+    width: 260px;
+    float: left;
 }
