--- a/src/app/features/user-profile/profile-stocks/profile-stocks.component.css
+++ b/src/app/features/user-profile/profile-stocks/profile-stocks.component.css
@@ -1,6 +1,6 @@
 .mainDiv {
     border: 5px solid black;
-    padding: 5px;
+    padding-right: 30px;
     margin: 5px;
     height: 320px;
     width: 600px;
