--- a/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.css
+++ b/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.css
@@ -1,18 +1,20 @@
 .mainDiv{
     border: 5px solid black;
     padding: 5px;
-    float: left;
 }
 
 .tableDesign{
     max-width: 300px;
-    float: left;
 }
 
 .tableDiv{
     border: solid 5px red;
     margin: 5px;
     padding: 5px;
-    float: left;
     height: 20px;
+}
+
+.cellDiv{
+    text-align: center;
+    width: 250px;
 }
