--- a/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
+++ b/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
@@ -2,7 +2,16 @@
     <div class="tableDiv">
         <table class="tableDesign">
             <tr>
-                <td>{{data}}</td><td>{{currentPrice}}</td>
+                <td >
+                    <div class="cellDiv">
+                        {{data}}
+                    </div>
+                </td>
+                <td>
+                    <div class="cellDiv">
+                        ${{currentPrice}}
+                    </div>
+                </td>
             </tr>
         </table>
     </div>
