wathclist UI component completed!

--- a/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.css
+++ b/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.css
@@ -1,7 +1,7 @@
 .watchlist {
-    border: 5px solid black;
+    /* border: 5px solid black; */
     padding: 5px;
-    margin: 5px 100px 30px 100px;
+    margin: 55px 100px 10px 100px;
     height: 300px;
     width: 250px;
     float: left;
