--- a/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.html
+++ b/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.html
@@ -1,4 +1,6 @@
 <div class="watchlist">
+  <div style="text-align:center">Stock Wathclist</div>
+  <br>
   <app-watchlist-item
   *ngFor= "let item of stkList"
   [data] = "item"
