--- a/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.css
+++ b/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.css
@@ -1,20 +1,28 @@
 .mainDiv{
-    border: 5px solid black;
-    padding: 5px;
+    /* border: 5px solid black; */
+    margin: 0px;
+    padding: 0px;
+}
+.tableDiv{
+    /* border: solid 5px red; */
+    margin: 0px;
+    padding: 0px;
+    height: 40px;
 }
 
 .tableDesign{
+    /* border: 5px solid yellowgreen; */
+    height: 30px;
     max-width: 300px;
-}
-
-.tableDiv{
-    border: solid 5px red;
-    margin: 5px;
-    padding: 5px;
-    height: 20px;
+    padding: 0px;
+    margin: 0px;
 }
 
 .cellDiv{
+    padding: 0px;
+    margin-left: 20px;
     text-align: center;
-    width: 250px;
+    height: 25px;
+    width: 70px;
+    /* border: 2px dotted dodgerblue; */
 }
