--- a/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
+++ b/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
@@ -1,3 +1,3 @@
 <div>
-  <!-- <tr><td>{{}}</td><td>{{}}</td><td>{{}}</td><td>{{}}</td></tr> -->
+  <tr><td>{{stock}}</td><td>{{shares}}</td></tr>
 </div>
