done with stocks component in user profile component

--- a/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
+++ b/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
@@ -1,3 +1,8 @@
 <div>
-  <tr><td>{{stock}}</td><td>{{shares}}</td></tr>
+  <tr>
+    <td>{{stock}}</td>
+    <td>{{shares}}</td>
+    <td>{{value}}</td>
+    <td>{{equity}}</td>
+  </tr>
 </div>
