--- a/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
+++ b/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
@@ -1,7 +1,7 @@
 <div>
   <tr>
-    <td>{{stock}}</td>
-    <td>{{shares}}</td>
+    <td>{{stock | uppercase}}</td>
+    <td>{{shares| uppercase}}</td>
     <td>{{value}}</td>
     <td>{{equity}}</td>
   </tr>
