--- a/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.css
+++ b/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.css
@@ -1,3 +1,12 @@
 td{
-    padding: 5px;
+    border: 5px solid black;
+    margin: 5px;
+    padding: 10px;
+
+}
+
+tr{
+    padding: 30px;
+    margin: 10px;
+    font-size: 20px;
 }
