Changes in stock research

--- a/src/app/features/stkResearch/stkSearch/stkSearch.component.html
+++ b/src/app/features/stkResearch/stkSearch/stkSearch.component.html
@@ -8,4 +8,8 @@
       (click)='addToWatchlist()'
       >Add to Watchlist
     </button>
+    <button
+      (click)='addToStocksOwned()'
+      >Buy
+    </button>
 </div>
