Adding stock management module

--- a/src/app/features/stock-management/stock-management.component.html
+++ b/src/app/features/stock-management/stock-management.component.html
@@ -1,3 +1,8 @@
-<p>
-  stock-management works!
-</p>
+<div>
+    <div style="display:inline">
+        <app-stock-list></app-stock-list>
+      </div>>
+      <div style="display:inline">
+          <app-stock-watchlist></app-stock-watchlist>
+      </div>>
+</div>
