--- a/src/app/header/app-header.component.html
+++ b/src/app/header/app-header.component.html
@@ -3,7 +3,7 @@
         <li><a routerLink="/userLogin">Stock Portfolio</a></li>
         <li><a routerLink="/userProfile">Portfolio Overview</a></li>
         <li><a routerLink="/stockResearch">Research Stocks</a></li>
-        <li><a routerLink="#">Manage Portfolio</a></li>
+        <li><a routerLink="/stockManagement">Manage Portfolio</a></li>
         <li><a routerLink="#">About</a></li>
         <li style="float:right"><a class="active" href="#">LogOut</a></li>
       </ul>
