--- a/src/app/features/user-profile/profile-account-details/profile-account-details.component.html
+++ b/src/app/features/user-profile/profile-account-details/profile-account-details.component.html
@@ -1,15 +1,13 @@
 <div class="mainDiv">
     <div class="divContainer"> 
         <table>
-          <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
-          <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
+          <tr><td>{{buyingPower}}</td></tr>
         </table>
       </div>
       
       <div class="divContainer">
           <table>
-            <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
-            <tr><td>{{buyingPower}}</td><td>{{withdrawableCash}}</td></tr>
+            <tr><td>{{portfolioValue}}</td></tr>
           </table>
         </div>
 </div>
