--- a/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
+++ b/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
@@ -4,7 +4,7 @@
             <tr>
                 <td >
                     <div class="cellDiv">
-                        {{data}}
+                        {{symbol}}
                     </div>
                 </td>
                 <td>
