stock mangement component changes

--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.html
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.html
@@ -1,3 +1,17 @@
-<p>
-  stock-mng-watchlist-item works!
-</p>
+<div>
+  <tr>
+    <td>
+      {{symbol}}
+    </td>
+    <td>
+      {{value}}
+    </td>
+    <td>
+      <button
+      (click)="removeStock()"
+      >
+        Remove
+      </button>
+    </td>
+  </tr>
+</div>
