stk list in stk management completed

--- a/src/app/features/stock-management/stock-management.component.html
+++ b/src/app/features/stock-management/stock-management.component.html
@@ -1,8 +1,8 @@
-<!-- <div>
+<div>
     <div style="display:inline">
-        <app-stock-list></app-stock-list>
-      </div>>
-      <div style="display:inline">
+        <app-stock-mng-watchlist></app-stock-mng-watchlist>
+      </div>
+      <!-- <div style="display:inline">
           <app-stock-watchlist></app-stock-watchlist>
-      </div>>
-</div> -->
+      </div>> -->
+</div>
