updated stock mangement page

--- a/src/app/features/stock-management/stock-management.component.html
+++ b/src/app/features/stock-management/stock-management.component.html
@@ -2,7 +2,7 @@
     <div style="display:inline">
         <app-stock-mng-watchlist></app-stock-mng-watchlist>
       </div>
-      <!-- <div style="display:inline">
-          <app-stock-watchlist></app-stock-watchlist>
-      </div>> -->
+      <div style="display:inline">
+          <app-stock-mng-stocks></app-stock-mng-stocks>
+      </div>>
 </div>
