--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.html
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.html
@@ -1,3 +1,23 @@
-<p>
-  stock-mng-stock-item works!
-</p>
+<div>
+    <tr>
+      <td>
+        {{stock | uppercase}}
+      </td>
+      <td>
+        {{value}}
+      </td>
+      <td>
+        <input [(ngModel)] = "number">
+      </td>
+      <td>
+        <button>
+          BUY
+        </button>
+      </td>
+      <td>
+        <button>
+          SELL
+        </button>
+      </td>
+    </tr>
+  </div>
