--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stocks.component.html
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stocks.component.html
@@ -1,3 +1,10 @@
-<p>
-  stock-mng-stocks works!
-</p>
+<div class="mainDiv">
+    <!-- <tr><th>Stocks</th><th>Shares</th><th>Value</th><th>Equity</th></tr> -->
+    <div class="templateDiv">
+      <app-stock-mng-stock-item
+      *ngFor="let stk of stks"
+      [data]="stk"
+      >
+    </app-stock-mng-stock-item>
+  </div>
+</div>
