--- a/src/app/features/stock-management/stock-management.component.html
+++ b/src/app/features/stock-management/stock-management.component.html
@@ -1,8 +1,8 @@
-<div>
-    <div style="display:inline">
+<div style="float:left;padding:30px">
+    <div style="float:left;border:5px solid black;overflow:scroll;margin-left:30px">
         <app-stock-mng-watchlist></app-stock-mng-watchlist>
       </div>
-      <div style="display:inline">
+      <div style="float:left;border:5px solid black;overflow:scroll">
           <app-stock-mng-stocks></app-stock-mng-stocks>
       </div>>
 </div>
