stock management remove functionality done

--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.html
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.html
@@ -4,7 +4,7 @@
         {{stock | uppercase}}
       </td>
       <td>
-        {{value}}
+        Current Price
       </td>
       <td>
         <input [(ngModel)] = "number">
@@ -15,7 +15,9 @@
         </button>
       </td>
       <td>
-        <button>
+        <button
+        (click)="sellStock()"
+        >
           SELL
         </button>
       </td>
