--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.html
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.html
@@ -4,6 +4,7 @@
     <app-stock-mng-watchlist-item
     *ngFor= "let item of stkList"
     [data] = "item"
+    (stkSymbol)="removeItem($event)"
     >
     </app-stock-mng-watchlist-item>
   </div>
