--- a/src/app/features/user-profile/profile-details/profile-details.component.html
+++ b/src/app/features/user-profile/profile-details/profile-details.component.html
@@ -1,6 +1,6 @@
 <div class="mainDiv">
     <div class="profilePic">
-        <img [src]="profilePic" alt="profile Pic" style="height:120px;width:100px">
+        <img [src]="profilePic || ''" alt="profile Pic" style="height:120px;width:100px">
       </div>
       
       <div class="tableDiv">
