--- a/src/app/features/user-profile/profile-stocks/profile-stocks.component.html
+++ b/src/app/features/user-profile/profile-stocks/profile-stocks.component.html
@@ -1,6 +1,6 @@
 <div class="mainDiv">
-    <tr><th>Stocks</th><th>Shares</th><th>Value</th><th>Equity</th></tr>
     <div class="templateDiv">
+        <!-- <tr><th>Stocks</th><th>Shares</th><th>Value</th><th>Equity</th></tr> -->
         <app-stocks-list
         *ngFor="let stk of stks"
         [data]="stk"
