--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.html
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.html
@@ -1,5 +1,5 @@
 <div class="watchlist">
-    <div style="text-align:center">Stock Wathclist</div>
+    <div style="text-align:center">EDIT Stock Wathclist</div>
     <br>
     <app-stock-mng-watchlist-item
     *ngFor= "let item of stkList"
