--- a/src/app/features/user-profile/profile-account-details/profile-account-details.component.html
+++ b/src/app/features/user-profile/profile-account-details/profile-account-details.component.html
@@ -1,13 +1,13 @@
 <div class="mainDiv">
     <div class="divContainer"> 
         <table>
-          <tr><td>{{buyingPower}}</td></tr>
+          <tr>Buying Power <td>{{buyingPower | number : '1.2-2'}}</td></tr>
         </table>
       </div>
       
-      <div class="divContainer">
+      <!-- <div class="divContainer">
           <table>
             <tr><td>{{portfolioValue}}</td></tr>
           </table>
-        </div>
+        </div> -->
 </div>
