--- a/src/app/features/user-profile/profile-stocks/profile-stocks.component.html
+++ b/src/app/features/user-profile/profile-stocks/profile-stocks.component.html
@@ -1,4 +1,5 @@
 <div class="mainDiv">
+    <div style="text-align:center;margin-top:35px">User Owned Stocks</div>
     <div class="templateDiv">
         <!-- <tr><th>Stocks</th><th>Shares</th><th>Value</th><th>Equity</th></tr> -->
         <app-stocks-list
@@ -7,4 +8,4 @@
         >
       </app-stocks-list>
     </div>
-</div>
+</div> 
