--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.css
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.css
@@ -1,6 +1,28 @@
 .mainDiv{
-    border: 5px solid black;
-    float: left;
-    padding: 5px;
-    margin: 5px;
+    /* border: 5px solid black; */
+    margin: 0px;
+    padding: 0px;
+}
+.tableDiv{
+    /* border: solid 5px red; */
+    margin: 0px;
+    padding: 0px;
+    height: 40px;
+}
+
+.tableDesign{
+    /* border: 5px solid yellowgreen; */
+    height: 30px;
+    max-width: 300px;
+    padding: 0px;
+    margin: 0px;
+}
+
+.cellDiv{
+    padding: 0px;
+    margin-left: 20px;
+    text-align: center;
+    height: 25px;
+    width: 70px;
+    /* border: 2px dotted dodgerblue; */
 }
