--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.html
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.html
@@ -1,14 +1,23 @@
-<div>
-  <tr>
-    <td>
-      {{symbol}}
-    </td>
-    <td>
-      <button
-      (click)="removeStock()"
-      >
-        Remove
-      </button>
-    </td>
-  </tr>
+<div class="mainDiv"> 
+    <div class="tableDiv">
+        <table class="tableDesign">
+            <tr>
+                <td >
+                    <div class="cellDiv">
+                        {{symbol | uppercase}}
+                    </div>
+                </td>
+                <td>
+                    <div class="cellDiv">
+                      <button
+                      (click)="removeStock()"
+                      >
+                      Remove
+                    </button>
+                    </div>
+                </td>
+            </tr>
+        </table>
+        <hr>
+    </div>
 </div>
