--- a/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
+++ b/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
@@ -1,8 +1,29 @@
-<div>
-  <tr>
-    <td>{{stock | uppercase}}</td>
-    <td>{{shares| uppercase}}</td>
-    <td>{{value}}</td>
-    <td>{{equity}}</td>
-  </tr>
+<div class="mainDiv"> 
+    <div class="tableDiv">
+        <table class="tableDesign">
+            <tr>
+                <td >
+                    <div class="cellDiv">
+                        {{stock | uppercase}}
+                    </div>
+                </td>
+                <td>
+                    <div class="cellDiv">
+                        {{shares| uppercase}}
+                    </div>
+                </td>
+                <td>
+                    <div class="cellDiv">
+                        {{value | number : '1.2-2'}}
+                    </div>
+                </td>
+                <td>
+                    <div class="cellDiv">
+                        {{equity | number : '1.2-2'}}
+                    </div>
+                </td>
+            </tr>
+        </table>
+        <hr>
+    </div>
 </div>
