--- a/src/app/header/app-header.component.css
+++ b/src/app/header/app-header.component.css
@@ -1,26 +1,26 @@
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
+/* Main container */
+
+.container{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 8px auto;
+    height: 50px;
+    background-color:black;
+    text-align: center;
+    align-content: center;
 }
 
-li {
-    float: left;
-}
+/* styling for anchor tags */
 
-li a {
-    display: block;
+.container a{
+    display: inline-block;
     color: white;
     text-align: center;
-    padding-left: 15px;
-    padding-right: 15px;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    padding: 15px;
+    margin: 0px 0px;
     text-decoration: none;
 }
 
-li a:hover {
-    background-color: #111;
+.container a:hover {
+    background-color:grey;
 }
