--- a/src/app/header/app-header.component.html
+++ b/src/app/header/app-header.component.html
@@ -1,10 +1,8 @@
-<div class="divDesign">
-    <ul>
-        <li><a routerLink="/userLogin">Stock Portfolio</a></li>
-        <li><a routerLink="/userProfile">Portfolio Overview</a></li>
-        <li><a routerLink="/stockResearch">Research Stocks</a></li>
-        <li><a routerLink="/stockManagement">Manage Portfolio</a></li>
-        <li><a routerLink="#">About</a></li>
-        <li style="float:right"><a class="active" href="#">LogOut</a></li>
-      </ul>
+<div class="container">
+    <a routerLink="/userLogin">Stock Portfolio</a>
+    <a routerLink="/userProfile">Portfolio Overview</a>
+    <a routerLink="/stockResearch">Research Stocks</a>
+    <a routerLink="/stockManagement">Manage Portfolio</a>
+    <a routerLink="#">About</a>
+    <a class="active" href="#">LogOut</a>
 </div>
