styling changes to login component

--- a/src/app/features/user-login/user-login.component.html
+++ b/src/app/features/user-login/user-login.component.html
@@ -1,7 +1,8 @@
-<div class="loginDiv">
+<div class="login-container">
   <p>To Login using google+ account click the button below</p>
   <button
-    style="margin:20px 100px 550px 100px"
-    (click) = "redirect()"
-  >Google Login</button>
+  (click)="redirect()"
+  >
+  Google Login
+  </button>
 </div>
