--- a/src/app/features/user-login/user-login.component.css
+++ b/src/app/features/user-login/user-login.component.css
@@ -1,8 +1,24 @@
-.loginDiv {
+/* login container class */
+.login-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    width: 25%;
     border: 5px solid black;
+    text-align: center;
+    margin: 75px 0px 10px 890px;
+}
+
+/* styling flex contents */
+
+.login-container p{
+    width: 75%;
+    padding: 15px;
+    margin: 10px auto;
+}
+
+.login-container button{
     padding: 5px;
-    margin: 75px;
-    height: 200px;
-    width: 300px;
-    float: right;
+    margin: 10px auto;
 }
