--- a/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
+++ b/src/app/features/user-profile/profile-stocks/stocks-list/stocks-list.component.html
@@ -1,4 +1,4 @@
-<div class="mainDiv"> 
+<!-- <div class="mainDiv"> 
     <div class="tableDiv">
         <table class="tableDesign">
             <tr>
@@ -26,4 +26,13 @@
         </table>
         <hr>
     </div>
+</div> -->
+
+
+<div class="owned-stock-row">
+    <p>{{stock | uppercase}}</p>
+    <p>{{shares| uppercase}}</p>
+    <p>{{value | number : '1.2-2'}}</p>
+    <p>{{equity | number : '1.2-2'}}</p>
 </div>
+<hr>
