--- a/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
+++ b/src/app/features/user-profile/profile-watchlist/watchlist-item/watchlist-item.component.html
@@ -1,4 +1,4 @@
-<div class="mainDiv"> 
+<!-- <div class="mainDiv"> 
     <div class="tableDiv">
         <table class="tableDesign">
             <tr>
@@ -16,4 +16,14 @@
         </table>
         <hr>
     </div>
+</div> -->
+
+<div class="watchlist-row">
+    <h3>
+        {{symbol | uppercase}}
+    </h3>
+    <p>
+        ${{currentPrice}}
+    </p>
 </div>
+<hr>
