--- a/src/app/features/user-profile/user-profile.component.html
+++ b/src/app/features/user-profile/user-profile.component.html
@@ -1,4 +1,4 @@
-<div class="mainDiv">
+<!-- <div class="mainDiv">
         <div class="profileDiv">
             <app-profile-details></app-profile-details>
         </div>
@@ -14,4 +14,23 @@
         <div class="movedLeft">
             <app-profile-stocks></app-profile-stocks>
         </div>
+</div> -->
+
+
+<div class="profile-container">
+    <div class="profile-details">
+        <app-profile-details></app-profile-details>
+    </div>
+    <!-- <div class="account-details">
+        <app-profile-account-details></app-profile-account-details>
+    </div> -->
+    <!-- <div class="graph">
+        <app-profile-graph></app-profile-graph>
+    </div> -->
+    <div class="profile-watchlist">
+        <app-profile-watchlist></app-profile-watchlist>
+    </div>
+    <div class="profile-stocks">
+        <app-profile-stocks></app-profile-stocks>
+    </div>
 </div>
