--- a/src/app/features/user-profile/profile-details/profile-details.component.html
+++ b/src/app/features/user-profile/profile-details/profile-details.component.html
@@ -1,4 +1,4 @@
-<div class="mainDiv">
+<!-- <div class="mainDiv">
     <div class="profilePic">
         <img [src]="profilePic || ''" alt="profile Pic" style="height:120px;width:100px">
       </div>
@@ -10,4 +10,18 @@
           <tr><td>PORTFOLIO VALUE:</td><td>10</td></tr>
         </table>
       </div>
+</div> -->
+
+<div class="profile-details-container">
+  <div class="profile-picture">
+    <img [src]="profilePic || ''" alt="profile Pic">
+  </div>
+  <div class="profile-user-details">
+    <h3>Name</h3>
+    <h4>{{lastName | uppercase}}</h4>
+    <h3>Gender</h3>
+    <h4>{{gender | uppercase}}</h4>
+    <h3>Buying Power</h3>
+    <h4>10</h4>
+  </div>
 </div>
