--- a/src/app/features/user-profile/profile-stocks/profile-stocks.component.css
+++ b/src/app/features/user-profile/profile-stocks/profile-stocks.component.css
@@ -1,4 +1,4 @@
-.mainDiv {
+/* .mainDiv {
     border: 5px solid black;
     padding-right: 30px;
     margin: 5px;
@@ -13,7 +13,7 @@
     padding: 5px;
 }
 td{
-    /* border: 5px solid black; */
+    border: 5px solid black;
     margin: 5px;
     padding: 10px;
 
@@ -23,4 +23,19 @@ tr{
     padding: 30px;
     margin: 10px;
     font-size: 20px;
+} */
+
+
+.owned-stocks-container{
+    margin: 10px auto;
+    border: 5px solid black;
+    padding: 10px;
+    width: 600px;
+    height: 350px;
+}
+
+.owned-stocks-container > h2{
+    margin: 5px auto;
+    padding: 10px;
+    text-align: center;
 }
