--- a/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.css
+++ b/src/app/features/user-profile/profile-watchlist/profile-watchlist.component.css
@@ -1,8 +1,22 @@
-.watchlist {
-    /* border: 5px solid black; */
+/* .watchlist {
+    border: 5px solid black;
     padding: 5px;
     margin: 55px 100px 10px 100px;
     height: 300px;
     width: 250px;
     float: left;
+} */
+
+/* Stock Watchlist Contanier */
+.stock-watchlist-container{
+    margin: 15px;
+    border: 5px solid black;
+    padding: 10px;
+    width: 300px;
+    height: 250px;
+}
+
+.stock-watchlist-container > h2{
+    margin: 10px auto;
+    text-align: center;
 }
