--- a/src/app/features/stock-management/stock-management.component.html
+++ b/src/app/features/stock-management/stock-management.component.html
@@ -1,11 +1,20 @@
-<div style="float:left;padding:30px">
+<!-- <div style="float:left;padding:30px">
     <div class="firstDiv">
         <app-stock-mng-watchlist></app-stock-mng-watchlist>
     </div>
     <div class="secondDiv">
         <app-stock-mng-stocks></app-stock-mng-stocks>
     </div>
-</div>
+</div> -->
 
 <!-- firstdiv css style style="float:left;border:5px solid black;overflow:scroll;margin-left:30px" -->
 <!-- SecondDiv css style style="float:left;border:5px solid black;overflow:scroll" -->
+
+<div class="manage-portfolio-container">
+    <div class="manage-watchlist">
+        <app-stock-mng-watchlist></app-stock-mng-watchlist>
+    </div>
+    <div class="manage-ownedstocks">
+        <app-stock-mng-stocks></app-stock-mng-stocks>
+    </div>
+</div>
