--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stocks.component.html
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stocks.component.html
@@ -1,5 +1,5 @@
-<div class="mainDiv">
-    <!-- <tr><th>Stocks</th><th>Shares</th><th>Value</th><th>Equity</th></tr> -->
+<!-- <div class="mainDiv">
+    <tr><th>Stocks</th><th>Shares</th><th>Value</th><th>Equity</th></tr>
     <div class="templateDiv">
       <app-stock-mng-stock-item
       *ngFor="let stk of stks"
@@ -7,4 +7,13 @@
       >
     </app-stock-mng-stock-item>
   </div>
+</div> -->
+
+<div class="manage-owned-stock">
+  <h2>Buy/Sell Stocks</h2>
+  <app-stock-mng-stock-item
+  *ngFor="let stk of stks"
+  [data]="stk"
+  >
+  </app-stock-mng-stock-item>
 </div>
