--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.html
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.html
@@ -1,4 +1,4 @@
-<div class="mainDiv"> 
+<!-- <div class="mainDiv"> 
     <div class="tableDiv">
         <table class="tableDesign">
             <tr>
@@ -21,3 +21,16 @@
         <hr>
     </div>
 </div>
+
+ -->
+
+
+
+ <div class="manage-watchlist-row">
+     <h3>{{symbol | uppercase}}</h3>
+     <button
+     (click)="removeStock()"
+     >
+     Remove
+    </button>
+ </div>
