--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.css
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stock-item/stock-mng-stock-item.component.css
@@ -1,17 +1,17 @@
-.mainDiv{
-    /* border: 5px solid black; */
+/* .mainDiv{
+    border: 5px solid black;
     margin: 0px;
     padding: 0px;
 }
 .tableDiv{
-    /* border: solid 5px red; */
+    border: solid 5px red;
     margin: 0px;
     padding: 0px;
     height: 40px;
 }
 
 .tableDesign{
-    /* border: 5px solid yellowgreen; */
+    border: 5px solid yellowgreen;
     height: 30px;
     max-width: 300px;
     padding: 0px;
@@ -24,5 +24,23 @@
     text-align: center;
     height: 25px;
     width: 70px;
-    /* border: 2px dotted dodgerblue; */
+    border: 2px dotted dodgerblue;
+} */
+
+
+.manage-ownedStock-row{
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    margin: 5px auto;
+    padding: 5px;
+    width: 100%;
+}
+
+.manage-ownedStock-row *{
+    margin: 0px auto;
+    padding: 5px;
+    width: 22%;
 }
