--- a/src/app/features/stock-management/stock-mng-stocks/stock-mng-stocks.component.css
+++ b/src/app/features/stock-management/stock-mng-stocks/stock-mng-stocks.component.css
@@ -1,3 +1,16 @@
-.mainDiv{
+/* .mainDiv{
     float: left;
+} */
+
+.manage-owned-stock{
+    margin: 15px auto;
+    padding: 15px;
+    width: 90%;
+    text-align: center;
+}
+
+.manage-owned-stock > h2 {
+    margin: 5px auto;
+    padding: 10px;
+    width: 80%;
 }
