--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.css
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.css
@@ -1,17 +1,17 @@
-.mainDiv{
-    /* border: 5px solid black; */
+/* .mainDiv{
+    border: 5px solid black;
     margin: 0px;
     padding: 0px;
 }
 .tableDiv{
-    /* border: solid 5px red; */
+    border: solid 5px red;
     margin: 0px;
     padding: 0px;
     height: 40px;
 }
 
 .tableDesign{
-    /* border: 5px solid yellowgreen; */
+    border: 5px solid yellowgreen;
     height: 30px;
     max-width: 300px;
     padding: 0px;
@@ -24,5 +24,37 @@
     text-align: center;
     height: 25px;
     width: 70px;
-    /* border: 2px dotted dodgerblue; */
+} */
+
+
+/* Wathclist row container */
+.manage-watchlist-row{
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+    margin: 5px 0px;
+    padding: 5px;
+    width: 100%;
+    text-align: center;
 }
+
+.manage-watchlist-row > h3{
+    margin: 0px auto;
+    padding: 10px;
+    width: 45%;
+}
+
+.manage-watchlist-row > button{
+    margin: 0px auto;
+    padding: 10px;
+    width: 45%;
+}
+
+
+
+
+
+
+
