--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.css
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist.component.css
@@ -1,3 +1,16 @@
-.watchlist{
-    float: left;
+/* Watchlist Container */
+
+.manage-watchlist-container{
+    margin: 15px auto;
+    padding: 15px;
+    width: 90%;
+    text-align: center;
+}
+
+/* Styling for first heading section in the watchlist container */
+
+.manage-watchlist-container > h2{
+    margin: 5px auto;
+    padding: 5px;
+    width: 80%;
 }
