--- a/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.css
+++ b/src/app/features/stock-management/stock-mng-watchlist/stock-mng-watchlist-item/stock-mng-watchlist-item.component.css
@@ -1,32 +1,3 @@
-/* .mainDiv{
-    border: 5px solid black;
-    margin: 0px;
-    padding: 0px;
-}
-.tableDiv{
-    border: solid 5px red;
-    margin: 0px;
-    padding: 0px;
-    height: 40px;
-}
-
-.tableDesign{
-    border: 5px solid yellowgreen;
-    height: 30px;
-    max-width: 300px;
-    padding: 0px;
-    margin: 0px;
-}
-
-.cellDiv{
-    padding: 0px;
-    margin-left: 20px;
-    text-align: center;
-    height: 25px;
-    width: 70px;
-} */
-
-
 /* Wathclist row container */
 .manage-watchlist-row{
     box-sizing: border-box;
@@ -40,12 +11,14 @@
     text-align: center;
 }
 
+/* Styling the first child element - Stock Symbol - h3*/
 .manage-watchlist-row > h3{
     margin: 0px auto;
     padding: 10px;
     width: 45%;
 }
 
+/* Styling the second child element - Button */
 .manage-watchlist-row > button{
     margin: 0px auto;
     padding: 10px;
