--- a/src/app/features/stock-management/stock-management.component.css
+++ b/src/app/features/stock-management/stock-management.component.css
@@ -10,16 +10,20 @@
     width: 90%;
 }
 
+/* Common container styling */
+.child-container{
+    margin: 15px auto;
+    border: 5px solid black;
+    padding: 30px;
+    /* overflow: scroll; */
+}
+
 /* First Child Element - Watchlist */
 .manage-watchlist{
-    margin: 15px auto;
-    padding: 30px;
     width: 25%;
 }
 
 /* Second Child Element - Owned Stocks */
 .manage-ownedstocks {
-    margin: 15px auto;
-    padding: 30px;
     width: 55%;
 }
